--- a/LANGCHAIN/Langchain Agents/langchain_agents.ipynb
+++ b/LANGCHAIN/Langchain Agents/langchain_agents.ipynb
@@ -1150,8 +1150,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#os.environ[\"OPENAI_API_KEY\"] = \"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\"  # Replace\n",
-    "os.environ[\"GEMINI_API_KEY\"] = \"AIzaSyCBHhZSK4Yrw7RZMqKqrApqGEJFRmaJCtI\"  # Replace"
+    "#os.environ[\"OPENAI_API_KEY\"] = \"Enter Your OPENAI Key\"  # Replace\n",
+    "os.environ[\"GEMINI_API_KEY\"] = \"Enter Your Gemini Key\"  # Replace"
    ]
   },
   {
