--- a/LANGCHAIN/LANGCHAIN GEMINI Image2Text/Gemini intro.ipynb
+++ b/LANGCHAIN/LANGCHAIN GEMINI Image2Text/Gemini intro.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['GEMINI_API_KEY'] = 'AIzaSyCBHhZSK4Yrw7RZMqKqrApqGEJFRmaJCtI'"
+    "os.environ['GEMINI_API_KEY'] = 'Enter Your Gemini API Key'"
    ]
   },
   {
